// THIS FILE IS GENERATED BY ftrace_proto_generator.py, PLEASE DON'T EDIT IT!
// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

// category: binder
// /sys/kernel/debug/tracing/events/binder/binder_alloc_lru_end/format
message BinderAllocLruEndFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_alloc_lru_start/format
message BinderAllocLruStartFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_alloc_page_end/format
message BinderAllocPageEndFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_alloc_page_start/format
message BinderAllocPageStartFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_command/format
message BinderCommandFormat {
    uint32 cmd = 1;
}

// /sys/kernel/debug/tracing/events/binder/binder_free_lru_end/format
message BinderFreeLruEndFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_free_lru_start/format
message BinderFreeLruStartFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_ioctl/format
message BinderIoctlFormat {
    uint32 cmd = 1;
    uint64 arg = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_ioctl_done/format
message BinderIoctlDoneFormat {
    int32 ret = 1;
}

// /sys/kernel/debug/tracing/events/binder/binder_lock/format
message BinderLockFormat {
    string tag = 1;
}

// /sys/kernel/debug/tracing/events/binder/binder_locked/format
message BinderLockedFormat {
    string tag = 1;
}

// /sys/kernel/debug/tracing/events/binder/binder_read_done/format
message BinderReadDoneFormat {
    int32 ret = 1;
}

// /sys/kernel/debug/tracing/events/binder/binder_return/format
message BinderReturnFormat {
    uint32 cmd = 1;
}

// /sys/kernel/debug/tracing/events/binder/binder_transaction/format
message BinderTransactionFormat {
    int32 debug_id = 1;
    int32 target_node = 2;
    int32 to_proc = 3;
    int32 to_thread = 4;
    int32 reply = 5;
    uint32 code = 6;
    uint32 flags = 7;
}

// /sys/kernel/debug/tracing/events/binder/binder_transaction_alloc_buf/format
message BinderTransactionAllocBufFormat {
    int32 debug_id = 1;
    uint64 data_size = 2;
    uint64 offsets_size = 3;
    uint64 extra_buffers_size = 4;
}

// /sys/kernel/debug/tracing/events/binder/binder_transaction_buffer_release/format
message BinderTransactionBufferReleaseFormat {
    int32 debug_id = 1;
    uint64 data_size = 2;
    uint64 offsets_size = 3;
    uint64 extra_buffers_size = 4;
}

// /sys/kernel/debug/tracing/events/binder/binder_transaction_failed_buffer_release/format
message BinderTransactionFailedBufferReleaseFormat {
    int32 debug_id = 1;
    uint64 data_size = 2;
    uint64 offsets_size = 3;
    uint64 extra_buffers_size = 4;
}

// /sys/kernel/debug/tracing/events/binder/binder_transaction_fd/format
message BinderTransactionFdFormat {
    int32 debug_id = 1;
    int32 src_fd = 2;
    int32 dest_fd = 3;
}

// /sys/kernel/debug/tracing/events/binder/binder_transaction_node_to_ref/format
message BinderTransactionNodeToRefFormat {
    int32 debug_id = 1;
    int32 node_debug_id = 2;
    uint64 node_ptr = 3;
    int32 ref_debug_id = 4;
    uint32 ref_desc = 5;
}

// /sys/kernel/debug/tracing/events/binder/binder_transaction_received/format
message BinderTransactionReceivedFormat {
    int32 debug_id = 1;
}

// /sys/kernel/debug/tracing/events/binder/binder_transaction_ref_to_node/format
message BinderTransactionRefToNodeFormat {
    int32 debug_id = 1;
    int32 ref_debug_id = 2;
    uint32 ref_desc = 3;
    int32 node_debug_id = 4;
    uint64 node_ptr = 5;
}

// /sys/kernel/debug/tracing/events/binder/binder_transaction_ref_to_ref/format
message BinderTransactionRefToRefFormat {
    int32 debug_id = 1;
    int32 node_debug_id = 2;
    int32 src_ref_debug_id = 3;
    uint32 src_ref_desc = 4;
    int32 dest_ref_debug_id = 5;
    uint32 dest_ref_desc = 6;
}

// /sys/kernel/debug/tracing/events/binder/binder_unlock/format
message BinderUnlockFormat {
    string tag = 1;
}

// /sys/kernel/debug/tracing/events/binder/binder_unmap_kernel_end/format
message BinderUnmapKernelEndFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_unmap_kernel_start/format
message BinderUnmapKernelStartFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_unmap_user_end/format
message BinderUnmapUserEndFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_unmap_user_start/format
message BinderUnmapUserStartFormat {
    int32 proc = 1;
    uint64 page_index = 2;
}

// /sys/kernel/debug/tracing/events/binder/binder_update_page_range/format
message BinderUpdatePageRangeFormat {
    int32 proc = 1;
    uint32 allocate = 2;
    uint64 offset = 3;
    uint64 size = 4;
}

// /sys/kernel/debug/tracing/events/binder/binder_wait_for_work/format
message BinderWaitForWorkFormat {
    uint32 proc_work = 1;
    uint32 transaction_stack = 2;
    uint32 thread_todo = 3;
}

// /sys/kernel/debug/tracing/events/binder/binder_write_done/format
message BinderWriteDoneFormat {
    int32 ret = 1;
}

